# perdiem-django

./: .travis.yml  README.md  fabfile.py  manage.py  pyproject.toml
accounts/: factories.py  views.py
api/: views.py
artist/: factories.py  forms.py  managers.py  tests.py  views.py
campaign/: factories.py  models.py  tests.py
emails/: factories.py
music/: factories.py  models.py
perdiem/: settings.py  wsgi.py
perdiem/settings/: base.py
templates/: base.html
