[tool.poetry]
name = "perdiem-django"
version = "0.1.0"
description = "Crowdfunding platform for emerging musicians."
authors = ["Lucas Connors <lucas@revolutiontech.ca>", "localastronaut"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~2.2.10"
gunicorn = "^20.0.4"
psycopg2 = "=2.8.5"
Pillow = "^7.1.2"
django-classbasedsettings = "^1.5.0"
social-auth-app-django = "^3.1.0"
python-memcached = "^1.59"
requests = "^2.23.0"
boto3 = "^1.12.36"
django-pigeon = "^0.3.0"
sorl-thumbnail = "^12.6.3"
whitenoise = "^5.0.1"
django-s3-storage = "^0.13.0"
djangorestframework = "^3.11.0"
django-ses = "^0.8.14"
geopy = "^1.21.0"
pinax-stripe = "^4.4.0"
django-templated-email = "^2.3.0"
django-markdown-deux = "^1.0.5"
django-pagedown = "^2.0.3"
django-gfklookupwidget = "^1.0.8"
python-dotenv = "^0.13.0"
sentry-sdk = "^0.14.3"
fabric = "^2.5"

[tool.poetry.dev-dependencies]
factory-boy = "^2.12.0"
coverage = "^5.1"
black = "^19.10b0"
pyupgrade = "^2.0"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
