[tool.poetry]
name = "perdiem-django"
version = "0.1.0"
description = "Crowdfunding platform for emerging musicians."
authors = ["Lucas Connors <lucas@revolutiontech.ca>", "localastronaut"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~2.2.10"
gunicorn = "^20.0.4"
psycopg2 = "=2.8.5"
Pillow = "^7.2.0"
social-auth-app-django = "^4.0.0"
python-memcached = "^1.59"
requests = "^2.24.0"
boto3 = "^1.14.33"
django-pigeon = "^0.3.0"
sorl-thumbnail = "^12.6.3"
whitenoise = "^5.1.0"
django-s3-storage = "^0.13.3"
djangorestframework = "^3.11.0"
django-ses = "^1.0.2"
geopy = "^2.0.0"
pinax-stripe = "^4.4.0"
django-templated-email = "^2.3.0"
django-markdown-deux = "^1.0.5"
django-pagedown = "^2.1.2"
django-gfklookupwidget = "^1.0.8"
python-dotenv = "^0.14.0"
sentry-sdk = "^0.16.0"
fabric = "^2.5"
django-configurations = "^2.2"

[tool.poetry.dev-dependencies]
factory-boy = "^2.12.0"
coverage = "^5.2"
black = "^19.10b0"
pyupgrade = "^2.7"
isort = "^4.3.21"

[tool.isort]
# https://github.com/psf/black/blob/master/docs/compatible_configs.md#isort
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
